--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "dompurify": "^3.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
