--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "dompurify": "^3.0.6",
+    "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
